minor changes to product page

--- a/product_listing/product_listing.html
+++ b/product_listing/product_listing.html
@@ -95,7 +95,7 @@
             <h2 class="category__heading">Cars</h2>
             <div class="category-section">
                 <div class="product--card ">
-                     <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img">
+                     <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
                      <h3 class="product--name">2013 Maruti Swift Dzire</h3>
                      <p class="product--version">VDI BS IV span </p>
                      <div class="product-spec">
@@ -114,7 +114,7 @@
                      </div>
                 </div>
                 <div class="product--card ">
-                    <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img">
+                    <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
                     <h3 class="product--name">2013 Maruti Swift Dzire</h3>
                     <p class="product--version">VDI BS IV span </p>
                     <div class="product-spec">
@@ -133,7 +133,7 @@
                     </div>
                </div>
                <div class="product--card ">
-                <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img">
+                <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
                 <h3 class="product--name">2013 Maruti Swift Dzire</h3>
                 <p class="product--version">VDI BS IV span </p>
                 <div class="product-spec">
@@ -153,7 +153,7 @@
            </div>
                 
            <div class="product--card ">
-            <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img">
+            <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
             <h3 class="product--name">2013 Maruti Swift Dzire</h3>
             <p class="product--version">VDI BS IV span </p>
             <div class="product-spec">
@@ -173,7 +173,7 @@
        </div>
 
        <div class="product--card ">
-        <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img">
+        <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
         <h3 class="product--name">2013 Maruti Swift Dzire</h3>
         <p class="product--version">VDI BS IV span </p>
         <div class="product-spec">
@@ -193,7 +193,7 @@
    </div>
 
    <div class="product--card ">
-    <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img">
+    <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
     <h3 class="product--name">2013 Maruti Swift Dzire</h3>
     <p class="product--version">VDI BS IV span </p>
     <div class="product-spec">
@@ -208,7 +208,7 @@
     <p class="product--downpayment">Zero downpayment</p>
     <div class="product-cta">
        <button class="product__btn">Book Now</button>
-       <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
+       <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist"/>
     </div>
 </div>
 
@@ -217,15 +217,14 @@
     </main>
     <footer class="footer" >
         <div class="social-links">
-            <a href="" class="item--link" ><img src="/images/home-page/person.png" class="img--icon-social" alt="Twitter"></a>
-            <a href="" class="item--link" ><img src="/images/home-page/person.png" class="img--icon-social" alt="Github"></a>
-            <a href="" class="item--link" ><img src="/images/home-page/person.png" class="img--icon-social" alt="LinkedIn"></a>
+            <a href="" class="item--link" ><img src="/images/home-page/person.png" class="img--icon-social" alt="Twitter"/></a>
+            <a href="" class="item--link" ><img src="/images/home-page/person.png" class="img--icon-social" alt="Github"/></a>
+            <a href="" class="item--link" ><img src="/images/home-page/person.png" class="img--icon-social" alt="LinkedIn"/></a>
         </div>
         <div class="footer--text">
             Designed by <span class="footer-credit">Shreyash Mahajan</span>
         </div>
     </footer>
 
-    <script src="app.js"></script>
 </body>
 </html>
