content updated of product card

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     </nav>
     <main class="main-container">
        <header class="hero">
-            <img src="/images/home-page/car.jpg" alt="" class="hero__img">
+            <img src="/images/home-page/bike-electric.webp" alt="" class="hero__img">
             <div class="hero-detail-container">
-                   <h1 class="hero__heading">Buy Cars at Most affordable prices</h1>
+                   <h1 class="hero__heading">Buy bikes at Most affordable prices</h1>
                    <p class="hero--text">Just one click away</p>
                    <button class="hero--btn">Shop Now</button>
             </div>
@@ -52,14 +52,14 @@
            <h2 class="category__heading">Categories</h2>
            <div class="category-section">
                <div class="category--card">
-                    <img src="/images/home-page/audi.jpg" alt="" class="category--card__image">
+                    <img src="/images/home-page/scooter.png" alt="" class="category--card__image">
                     <div class="category--card-content">
-                         <h1 class="category--card__heading">Cars</h1>
+                         <h1 class="category--card__heading">Scooters</h1>
                           <button class="category--card-btn">Buy Now</button>
                     </div>
                </div>
                <div class="category--card">
-                <img src="/images/home-page/pulsar.jpg" alt="" class="category--card__image">
+                <img src="/images/home-page/bike-electric.webp" alt="" class="category--card__image">
                 <div class="category--card-content">
                      <h1 class="category--card__heading">Bikes</h1>
                       <button class="category--card-btn">Buy Now</button>
@@ -68,62 +68,62 @@
            </div>
        </div>
        <div class="category-wrapper">
-        <h2 class="category__heading">Featured Cars</h2>
+        <h2 class="category__heading">Popular Scooters</h2>
         <div class="category-section">
             <div class="product--card ">
-                 <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img">
-                 <h3 class="product--name">2013 Maruti Swift Dzire</h3>
-                 <p class="product--version">VDI BS IV span </p>
+                 <img src="/images/home-page/scooter.png" alt="swift car" class="product__img">
+                 <h3 class="product--name">2021 Lorem </h3>
+                 <p class="product--version">VDI BS VI span </p>
                  <div class="product-spec">
-                     <p class="product-info">40,212 km</p>
-                     <p class="product-info">1st Owner</p>
-                     <p class="product-info">Diesel</p>
+                     <p class="product-info">100 km/hr</p>
+                     <p class="product-info">Automatic</p>
+                     <p class="product-info">Electric</p>
                  </div>
                  <div class="product-price">
-                     <p class="product-emi">₹9,000/month</p>
-                     <p class="product-total">₹5,00,000</p>
+                     <p class="product-emi">₹4,333/month</p>
+                     <p class="product-total">75,000</p>
                  </div>
                  <p class="product--downpayment">Zero downpayment</p>
                  <div class="product-cta">
-                    <button class="product__btn">Book Now</button>
+                    <button class="product__btn">Buy Now</button>
                     <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
                  </div>
             </div>
             <div class="product--card ">
-                <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img">
-                <h3 class="product--name">2013 Maruti Swift Dzire</h3>
-                <p class="product--version">VDI BS IV span </p>
+                <img src="/images/home-page/scooter.png" alt="swift car" class="product__img">
+                <h3 class="product--name">2021 Lorem </h3>
+                <p class="product--version">VDI BS VI span </p>
                 <div class="product-spec">
-                    <p class="product-info">40,212 km</p>
-                    <p class="product-info">1st Owner</p>
-                    <p class="product-info">Diesel</p>
+                    <p class="product-info">100 km/hr</p>
+                    <p class="product-info">Automatic</p>
+                    <p class="product-info">Electric</p>
                 </div>
                 <div class="product-price">
-                    <p class="product-emi">₹9,000/month</p>
-                    <p class="product-total">₹5,00,000</p>
+                    <p class="product-emi">₹4,333/month</p>
+                    <p class="product-total">75,000</p>
                 </div>
                 <p class="product--downpayment">Zero downpayment</p>
                 <div class="product-cta">
-                   <button class="product__btn">Book Now</button>
+                   <button class="product__btn">Buy Now</button>
                    <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
                 </div>
            </div>
            <div class="product--card ">
-            <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img">
-            <h3 class="product--name">2013 Maruti Swift Dzire</h3>
-            <p class="product--version">VDI BS IV span </p>
+            <img src="/images/home-page/scooter.png" alt="swift car" class="product__img">
+            <h3 class="product--name">2021 Lorem </h3>
+            <p class="product--version">VDI BS VI span </p>
             <div class="product-spec">
-                <p class="product-info">40,212 km</p>
-                <p class="product-info">1st Owner</p>
-                <p class="product-info">Diesel</p>
+                <p class="product-info">100 km/hr</p>
+                <p class="product-info">Automatic</p>
+                <p class="product-info">Electric</p>
             </div>
             <div class="product-price">
-                <p class="product-emi">₹9,000/month</p>
-                <p class="product-total">₹5,00,000</p>
+                <p class="product-emi">₹4,333/month</p>
+                <p class="product-total">75,000</p>
             </div>
             <p class="product--downpayment">Zero downpayment</p>
             <div class="product-cta">
-               <button class="product__btn">Book Now</button>
+               <button class="product__btn">Buy Now</button>
                <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
             </div>
        </div>
@@ -134,59 +134,59 @@
         <h2 class="category__heading">Popular Bikes</h2>
         <div class="category-section">
             <div class="product--card ">
-                <img src="/images/home-page/shine.jpg" alt="swift car" class="product__img">
-                <h3 class="product--name">Honda C.B. Shine</h3>
-                <p class="product--version">BS IV multi spark</p>
+                <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+                <h3 class="product--name">2021 Lorem </h3>
+                <p class="product--version">VDI BS VI span </p>
                 <div class="product-spec">
-                    <p class="product-info">40,212 km</p>
-                    <p class="product-info">1st Owner</p>
+                    <p class="product-info">100 km/hr</p>
+                    <p class="product-info">Automatic</p>
                     <p class="product-info">Electric</p>
                 </div>
                 <div class="product-price">
                     <p class="product-emi">₹4,333/month</p>
-                    <p class="product-total">68,000</p>
+                    <p class="product-total">75,000</p>
                 </div>
                 <p class="product--downpayment">Zero downpayment</p>
                 <div class="product-cta">
-                   <button class="product__btn">Book Now</button>
+                   <button class="product__btn">Buy Now</button>
                    <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
                 </div>
            </div>
            <div class="product--card ">
-            <img src="/images/home-page/shine.jpg" alt="swift car" class="product__img">
-            <h3 class="product--name">Honda C.B. Shine</h3>
-            <p class="product--version">BS IV multi spark</p>
+            <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+            <h3 class="product--name">2021 Lorem </h3>
+            <p class="product--version">VDI BS VI span </p>
             <div class="product-spec">
-                <p class="product-info">40,212 km</p>
-                <p class="product-info">1st Owner</p>
-                <p class="product-info">Petrol</p>
+                <p class="product-info">100 km/hr</p>
+                <p class="product-info">Automatic</p>
+                <p class="product-info">Electric</p>
             </div>
             <div class="product-price">
                 <p class="product-emi">₹4,333/month</p>
-                <p class="product-total">68,000</p>
+                <p class="product-total">75,000</p>
             </div>
             <p class="product--downpayment">Zero downpayment</p>
             <div class="product-cta">
-               <button class="product__btn">Book Now</button>
+               <button class="product__btn">Buy Now</button>
                <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
             </div>
        </div>
        <div class="product--card ">
-        <img src="/images/home-page/shine.jpg" alt="swift car" class="product__img">
-        <h3 class="product--name">Honda C.B. Shine</h3>
-        <p class="product--version">BS IV multi spark</p>
+        <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+        <h3 class="product--name">2021 Lorem </h3>
+        <p class="product--version">VDI BS VI span </p>
         <div class="product-spec">
-            <p class="product-info">40,212 km</p>
-            <p class="product-info">1st Owner</p>
-            <p class="product-info">Petrol</p>
+            <p class="product-info">100 km/hr</p>
+            <p class="product-info">Automatic</p>
+            <p class="product-info">Electric</p>
         </div>
         <div class="product-price">
             <p class="product-emi">₹4,333/month</p>
-            <p class="product-total">68,000</p>
+            <p class="product-total">75,000</p>
         </div>
         <p class="product--downpayment">Zero downpayment</p>
         <div class="product-cta">
-           <button class="product__btn">Book Now</button>
+           <button class="product__btn">Buy Now</button>
            <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
         </div>
    </div>
