--- a/product_listing/product_listing.html
+++ b/product_listing/product_listing.html
@@ -92,126 +92,125 @@
     </aside>
     <main class="main-container">
         <div class="category-wrapper">
-            <h2 class="category__heading">Cars</h2>
+            <h2 class="category__heading">Bikes</h2>
             <div class="category-section">
                 <div class="product--card ">
-                     <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
-                     <h3 class="product--name">2013 Maruti Swift Dzire</h3>
-                     <p class="product--version">VDI BS IV span </p>
-                     <div class="product-spec">
-                         <p class="product-info">40,212 km</p>
-                         <p class="product-info">1st Owner</p>
-                         <p class="product-info">Diesel</p>
-                     </div>
-                     <div class="product-price">
-                         <p class="product-emi">₹9,000/month</p>
-                         <p class="product-total">₹5,00,000</p>
-                     </div>
-                     <p class="product--downpayment">Zero downpayment</p>
-                     <div class="product-cta">
-                        <button class="product__btn">Book Now</button>
-                        <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
-                     </div>
-                </div>
-                <div class="product--card ">
-                    <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
-                    <h3 class="product--name">2013 Maruti Swift Dzire</h3>
-                    <p class="product--version">VDI BS IV span </p>
+                    <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+                    <h3 class="product--name">2021 Lorem </h3>
+                    <p class="product--version">VDI BS VI span </p>
                     <div class="product-spec">
-                        <p class="product-info">40,212 km</p>
-                        <p class="product-info">1st Owner</p>
-                        <p class="product-info">Diesel</p>
+                        <p class="product-info">100 km/hr</p>
+                        <p class="product-info">Automatic</p>
+                        <p class="product-info">Electric</p>
                     </div>
                     <div class="product-price">
-                        <p class="product-emi">₹9,000/month</p>
-                        <p class="product-total">₹5,00,000</p>
+                        <p class="product-emi">₹4,333/month</p>
+                        <p class="product-total">75,000</p>
                     </div>
                     <p class="product--downpayment">Zero downpayment</p>
                     <div class="product-cta">
-                       <button class="product__btn">Book Now</button>
+                       <button class="product__btn">Buy Now</button>
                        <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
                     </div>
                </div>
                <div class="product--card ">
-                <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
-                <h3 class="product--name">2013 Maruti Swift Dzire</h3>
-                <p class="product--version">VDI BS IV span </p>
+                <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+                <h3 class="product--name">2021 Lorem </h3>
+                <p class="product--version">VDI BS VI span </p>
                 <div class="product-spec">
-                    <p class="product-info">40,212 km</p>
-                    <p class="product-info">1st Owner</p>
-                    <p class="product-info">Diesel</p>
+                    <p class="product-info">100 km/hr</p>
+                    <p class="product-info">Automatic</p>
+                    <p class="product-info">Electric</p>
                 </div>
                 <div class="product-price">
-                    <p class="product-emi">₹9,000/month</p>
-                    <p class="product-total">₹5,00,000</p>
+                    <p class="product-emi">₹4,333/month</p>
+                    <p class="product-total">75,000</p>
                 </div>
                 <p class="product--downpayment">Zero downpayment</p>
                 <div class="product-cta">
-                   <button class="product__btn">Book Now</button>
+                   <button class="product__btn">Buy Now</button>
                    <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
                 </div>
            </div>
-                
            <div class="product--card ">
-            <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
-            <h3 class="product--name">2013 Maruti Swift Dzire</h3>
-            <p class="product--version">VDI BS IV span </p>
+            <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+            <h3 class="product--name">2021 Lorem </h3>
+            <p class="product--version">VDI BS VI span </p>
             <div class="product-spec">
-                <p class="product-info">40,212 km</p>
-                <p class="product-info">1st Owner</p>
-                <p class="product-info">Diesel</p>
+                <p class="product-info">100 km/hr</p>
+                <p class="product-info">Automatic</p>
+                <p class="product-info">Electric</p>
             </div>
             <div class="product-price">
-                <p class="product-emi">₹9,000/month</p>
-                <p class="product-total">₹5,00,000</p>
+                <p class="product-emi">₹4,333/month</p>
+                <p class="product-total">75,000</p>
             </div>
             <p class="product--downpayment">Zero downpayment</p>
             <div class="product-cta">
-               <button class="product__btn">Book Now</button>
+               <button class="product__btn">Buy Now</button>
                <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
             </div>
        </div>
-
+                
        <div class="product--card ">
-        <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
-        <h3 class="product--name">2013 Maruti Swift Dzire</h3>
-        <p class="product--version">VDI BS IV span </p>
+        <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+        <h3 class="product--name">2021 Lorem </h3>
+        <p class="product--version">VDI BS VI span </p>
         <div class="product-spec">
-            <p class="product-info">40,212 km</p>
-            <p class="product-info">1st Owner</p>
-            <p class="product-info">Diesel</p>
+            <p class="product-info">100 km/hr</p>
+            <p class="product-info">Automatic</p>
+            <p class="product-info">Electric</p>
         </div>
         <div class="product-price">
-            <p class="product-emi">₹9,000/month</p>
-            <p class="product-total">₹5,00,000</p>
+            <p class="product-emi">₹4,333/month</p>
+            <p class="product-total">75,000</p>
         </div>
         <p class="product--downpayment">Zero downpayment</p>
         <div class="product-cta">
-           <button class="product__btn">Book Now</button>
+           <button class="product__btn">Buy Now</button>
            <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
         </div>
    </div>
 
    <div class="product--card ">
-    <img src="/images/home-page/swift.jpg" alt="swift car" class="product__img"/>
-    <h3 class="product--name">2013 Maruti Swift Dzire</h3>
-    <p class="product--version">VDI BS IV span </p>
+    <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+    <h3 class="product--name">2021 Lorem </h3>
+    <p class="product--version">VDI BS VI span </p>
     <div class="product-spec">
-        <p class="product-info">40,212 km</p>
-        <p class="product-info">1st Owner</p>
-        <p class="product-info">Diesel</p>
+        <p class="product-info">100 km/hr</p>
+        <p class="product-info">Automatic</p>
+        <p class="product-info">Electric</p>
     </div>
     <div class="product-price">
-        <p class="product-emi">₹9,000/month</p>
-        <p class="product-total">₹5,00,000</p>
+        <p class="product-emi">₹4,333/month</p>
+        <p class="product-total">75,000</p>
     </div>
     <p class="product--downpayment">Zero downpayment</p>
     <div class="product-cta">
-       <button class="product__btn">Book Now</button>
-       <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist"/>
+       <button class="product__btn">Buy Now</button>
+       <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
     </div>
 </div>
 
+<div class="product--card ">
+    <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+    <h3 class="product--name">2021 Lorem </h3>
+    <p class="product--version">VDI BS VI span </p>
+    <div class="product-spec">
+        <p class="product-info">100 km/hr</p>
+        <p class="product-info">Automatic</p>
+        <p class="product-info">Electric</p>
+    </div>
+    <div class="product-price">
+        <p class="product-emi">₹4,333/month</p>
+        <p class="product-total">75,000</p>
+    </div>
+    <p class="product--downpayment">Zero downpayment</p>
+    <div class="product-cta">
+       <button class="product__btn">Buy Now</button>
+       <img src="/images/home-page/wishlist-black.png" alt="" class="product-wishlist">
+    </div>
+</div>
             </div>
         </div>
     </main>
