minor changes done

--- a/authentication/forgot_password/forgotPass.html
+++ b/authentication/forgot_password/forgotPass.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,59 +12,69 @@
     <link rel="stylesheet" href="/authentication/login_page/login.css">
     <link rel="stylesheet" href="/authentication/forgot_password/forgotPass.css">
 </head>
+
 <body class="body-container">
     <nav class="navbar">
         <h3 class="nav__heading">Lorem</h3>
         <div class="search-container">
             <input type="search" name="searchBar" class="input__search" placeholder="search here">
-            <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search" class="img--icon"></button></a>
+            <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search"
+                        class="img--icon" /></button></a>
         </div>
         <div class="customer-info">
-           <a href="/authentication/login_page/login.html" class="link"> <button class="btn--login">Login</button> </a>
-           <a href="/wishlist/wishlist.html" class="item--link"> <div class="wishlist-box">
-                <div class="badge">
-                    <img src="/images/home-page/wishlist.png" alt="wishlist image" class="badge__img">
-                    <span class="badge__text">7</span>
+            <a href="/authentication/login_page/login.html" class="link"> <button class="btn--login">Login</button> </a>
+            <a href="/wishlist/wishlist.html" class="item--link">
+                <div class="wishlist-box">
+                    <div class="badge">
+                        <img src="/images/home-page/wishlist.png" alt="wishlist image" class="badge__img" />
+                        <span class="badge__text">7</span>
+                    </div>
                 </div>
-            </div>
-        </a>
-          <a href="/cart_page/cart_page.css" class="item--link"> <div class="cart-box">
-                <div class="badge">
-                    <img src="/images/home-page/cart.png" alt="Cart image" class="badge__img">
-                    <span class="badge__text">1</span>
+            </a>
+            <a href="/cart_page/cart_page.css" class="item--link">
+                <div class="cart-box">
+                    <div class="badge">
+                        <img src="/images/home-page/cart.png" alt="Cart image" class="badge__img">
+                        <span class="badge__text">1</span>
+                    </div>
+                    <p class="text--cart">Cart</p>
                 </div>
-                <p class="text--cart">Cart</p>
-            </div>
-        </a>
+            </a>
         </div>
         <div class="search-container search-container2">
             <input type="search" name="searchBar" class="input__search" placeholder="search here">
-            <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search" class="img--icon"></button></a>
+            <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search"
+                        class="img--icon"></button></a>
         </div>
     </nav>
     <main class="main-container">
         <div class="form-wrapper">
-             <h2 class="form__heading ">Forgot Password</h2>
-             <div class="form-main-container">
+            <h2 class="form__heading ">Forgot Password</h2>
+            <div class="form-main-container">
                 <div id="login" class="form-container">
                     <label for="user-reset-phone-email">Enter Phone / Email Id</label>
-                    <input type="text" name="reset-phone-email" id="reset-phone-email" class="input-data" placeholder="enter phone/email">
+                    <input type="text" name="reset-phone-email" id="reset-phone-email" class="input-data"
+                        placeholder="enter phone/email">
                     <label for="user-otp">Enter OTP</label>
                     <div class="confirm-user-data">
-                    <input type="text" name="userOtp" id="userOtp" placeholder="enter OTP" class="input-data">
-                    <label for="inputPassword">New Password</label>
-                    <input type="text" name="inputPassword" id="inputPassword" class="input-data" placeholder="password">
-                    <label for="inputPassword">Confirm Password</label>
-                    <input type="text" name="confirmPassword" id="confirmPassword" class="input-data" placeholder="confirm password">
+                        <input type="text" name="userOtp" id="userOtp" placeholder="enter OTP" class="input-data">
+                        <label for="inputPassword">New Password</label>
+                        <input type="text" name="inputPassword" id="inputPassword" class="input-data"
+                            placeholder="password">
+                        <label for="inputPassword">Confirm Password</label>
+                        <input type="text" name="confirmPassword" id="confirmPassword" class="input-data"
+                            placeholder="confirm password">
                     </div>
                     <button class="btn-user--login btn--reset">Reset Password</button>
-                    <a href="/authentication/login_page/login.html"> <button class="btn-user--login btn--change-pass">Change Password</button> </a> 
+                    <a href="/authentication/login_page/login.html"> <button
+                            class="btn-user--login btn--change-pass">Change Password</button> </a>
                 </div>
-                
-             </div>
+
+            </div>
         </div>
     </main>
 
-     <script src="/authentication/forgot_password/forgotPass.js"></script>
+    <script src="/authentication/forgot_password/forgotPass.js"></script>
 </body>
-</html>    
+
+</html>
